--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>hello</title>
 </head>
 <body>
-<h1> hello coursra! </h1>>
+<h1> hello coursra! it is a great course </h1>>
 </body>
 </html>
